Bug 453088 - Alt clicking layer does no longer toggle Isolate Active Layer (prealpha-917ee65ee2)
Summary: Alt clicking layer does no longer toggle Isolate Active Layer (prealpha-917ee...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-04-27 14:32 UTC by gm.ravnevand
Modified: 2022-04-27 23:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gm.ravnevand 2022-04-27 14:32:40 UTC
prealpha-917ee65ee2

SUMMARY
***
Alt clicking layer does no longer toggle Isolate Active Layer 
***


STEPS TO REPRODUCE
1.  Alt + click layer 

OBSERVED RESULT
Isolate Active Layer does not toggle on

EXPECTED RESULT
Isolate Active Layer sctivates 

SOFTWARE/OS VERSIONS
Windows: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2022-04-27 16:11:44 UTC
Probably offending commit: https://invent.kde.org/graphics/krita/-/commit/ad3b02de8f8a3dd1b5d09146587a2ac37e2d5bc3
Comment 2 Halla Rempt 2022-04-27 17:02:26 UTC
Lynx3d says:

commit 3d2223f53c73b03692b8ae6429809602b6d72a12
Author: Dmitry Kazakov <dimula73@gmail.com>
Date:   Mon Apr 18 13:28:06 2022 +0300

    Let File Layers report errors with filesystem via node properties
    
    Now the user can see an exclamation mark near the file layer's name
    when the layer fails to access/parse the linked file. The user can hover
    the exclamation mark and see what actually hapened.
    
    BUG:446832
Comment 3 Eoin O'Neill 2022-04-27 23:56:37 UTC
Git commit e53f96854a1432a096037409c18cd724345405ee by Eoin O'Neill.
Committed on 27/04/2022 at 23:56.
Pushed by eoinoneill into branch 'master'.

Fix alt-click not invoking isolate layer behavior.

M  +7    -9    plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/graphics/krita/commit/e53f96854a1432a096037409c18cd724345405ee