Fix alt-click not invoking isolate layer behavior.

BUG:453088